feat: bump zio-bdd to 1.2.0 and add MockControl/@mock tooling support
- Bump zio-bdd 1.1.0 -> 1.2.0 (build.sbt).
- Harden StepLoader so MockSteps/MockControl suites and embedded-Rift
  FFM references on an unsupported JDK are isolated per-suite and never
  abort step extraction; failures are caught (incl. Error) and logged,
  extraction stays backend-agnostic and side-effect-free.
- Add @mock(...) Gherkin tag highlighting + tag completion across LSP,
  IntelliJ, and VSCode, mirroring the existing @flags(...) support.

Closes #35